WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129349
Assertion failure at CachedResource.h:196: ASSERT(!m_purgeableData)
https://bugs.webkit.org/show_bug.cgi?id=129349
Summary
Assertion failure at CachedResource.h:196: ASSERT(!m_purgeableData)
Pratik Solanki
Reported
2014-02-25 16:59:08 PST
This assertion triggers frequently when launching Safari/loading URLs.
Attachments
Patch
(1.75 KB, patch)
2014-02-25 17:02 PST
,
Pratik Solanki
no flags
Details
Formatted Diff
Diff
Patch
(1.79 KB, patch)
2014-02-25 17:03 PST
,
Pratik Solanki
no flags
Details
Formatted Diff
Diff
Patch
(2.06 KB, patch)
2014-02-26 12:49 PST
,
Pratik Solanki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Pratik Solanki
Comment 1
2014-02-25 17:02:02 PST
Created
attachment 225199
[details]
Patch
Pratik Solanki
Comment 2
2014-02-25 17:02:39 PST
<
rdar://problem/14871837
>
Pratik Solanki
Comment 3
2014-02-25 17:03:21 PST
Created
attachment 225200
[details]
Patch
Darin Adler
Comment 4
2014-02-26 10:01:22 PST
Comment on
attachment 225200
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=225200&action=review
> Source/WebKit/mac/ChangeLog:11 > + The code for clearing out memory mapped notification callbacks is only needed when loading > + PDFs. And in such cases, we always have dataSourceDelegate object. So make this code > + conditional on its presence so that we don't trigger the assert for non-PDF main resources.
Maybe the change is OK, but the code change itself is completely mysterious. There’s a null check of dataSourceDelegate, but nothing makes clear why it’s OK to skip the code below if the delegate is null. I think you need some kind of comment.
Pratik Solanki
Comment 5
2014-02-26 11:02:32 PST
(In reply to
comment #4
)
> (From update of
attachment 225200
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=225200&action=review
> > > Source/WebKit/mac/ChangeLog:11 > > + The code for clearing out memory mapped notification callbacks is only needed when loading > > + PDFs. And in such cases, we always have dataSourceDelegate object. So make this code > > + conditional on its presence so that we don't trigger the assert for non-PDF main resources. > > Maybe the change is OK, but the code change itself is completely mysterious. There’s a null check of dataSourceDelegate, but nothing makes clear why it’s OK to skip the code below if the delegate is null. I think you need some kind of comment.
Yeah, I agree. I'll add comments in the change. I think Joe and I are leaning towards removing this whole disk image cache code path now that we have CFNetwork disk cache.
Pratik Solanki
Comment 6
2014-02-26 11:02:32 PST
(In reply to
comment #4
)
> (From update of
attachment 225200
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=225200&action=review
> > > Source/WebKit/mac/ChangeLog:11 > > + The code for clearing out memory mapped notification callbacks is only needed when loading > > + PDFs. And in such cases, we always have dataSourceDelegate object. So make this code > > + conditional on its presence so that we don't trigger the assert for non-PDF main resources. > > Maybe the change is OK, but the code change itself is completely mysterious. There’s a null check of dataSourceDelegate, but nothing makes clear why it’s OK to skip the code below if the delegate is null. I think you need some kind of comment.
Yeah, I agree. I'll add comments in the change. I think Joe and I are leaning towards removing this whole disk image cache code path now that we have CFNetwork disk cache.
Pratik Solanki
Comment 7
2014-02-26 12:49:38 PST
Created
attachment 225284
[details]
Patch
Joseph Pecoraro
Comment 8
2014-02-27 10:44:31 PST
Comment on
attachment 225284
[details]
Patch r=me, This is a harmless addition to avoid an assert we know about and can't easily fix. We want to just remove DiskImageCache altogether eventually.
WebKit Commit Bot
Comment 9
2014-02-27 11:06:21 PST
Comment on
attachment 225284
[details]
Patch Clearing flags on attachment: 225284 Committed
r164817
: <
http://trac.webkit.org/changeset/164817
>
WebKit Commit Bot
Comment 10
2014-02-27 11:06:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug