Assertion failure at CachedResource.h:196: ASSERT(!m_purgeableData) https://bugs.webkit.org/show_bug.cgi?id=129349 <rdar://problem/14871837>

Reviewed by Joseph Pecoraro.

The code for clearing out memory mapped notification callbacks is only needed when loading
PDFs. And in such cases, we always have dataSourceDelegate object. So make this code
conditional on its presence so that we don't trigger the assert for non-PDF main resources.

* WebView/WebDataSource.mm:
(-[WebDataSource dealloc]):


Canonical link: https://commits.webkit.org/147504@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164817 268f45cc-cd09-0410-ab3c-d52691b4dbfc